--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Security and analysis reports
+bandit-report.json
+safety-report.json
+*.sarif
+
+# Code analysis outputs
+.radon_cache/
+.xenon_cache/
+vulture.whitelist
+
+# Development tools
+.pre-commit-config.yaml
