--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -8,10 +8,17 @@ on:
 
 jobs:
   lint-and-security:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        exclude:
+          # Reduce matrix size by excluding some combinations
+          - os: macos-latest
+            python-version: "3.8"
+          - os: windows-latest  
+            python-version: "3.8"
     
     steps:
     - name: Checkout code
@@ -77,7 +84,7 @@ jobs:
       uses: actions/upload-artifact@v3
       if: always()
       with:
-        name: security-reports-${{ matrix.python-version }}
+        name: security-reports-${{ matrix.os }}-${{ matrix.python-version }}
         path: |
           bandit-report.json
           safety-report.json
